<resources>
    <string name="app_name">EventsApp</string>
    <string name="sLogin">Login</string>
    <string name="sPassword">Senha</string>
    <string name="sEmail">E-mail</string>
    <string name="sUserDate">Aniversário</string>
    <string name="sBtnLogin">Logar</string>
    <string name="sBtnRegister">Criar Novo</string>
    <string name="sBtnGoBack">Voltar</string>
    <string name="sBtnUpdate">Alterar</string>
    <string name="sBtnDelete">Deletar</string>
    <string name="sBtnCancel">Cancelar</string>
    <string name="sBtnDeleteUser">Deletar Usuário</string>

    <string name="sNameEvent">Nome do Evento</string>
    <string name="sDescriptionEvent">Descrição do Evento</string>
    <string name="sDateEvent">Data do Evento</string>
    <string name="sTimeEvent">Horário do Evento</string>
    <string name="sLatitudeEvent">Latitude</string>
    <string name="sLongitudeEvent">Longitude</string>
    <string name="sBtnLocation">Adicionar Localização</string>
    <string name="sBtnNewEvent">Criar Evento</string>
    <string name="sBtnUpdateEvent">Alterar Evento</string>
    <string name="sBtnDeleteEvent">Deletar Evento</string>

    <string name="sEventLocation">Localização do Evento</string>
    <string name="sSetLocation">Adicionar marcador</string>
    <string name="sQMyLocation">Você deseja adicionar o marcador aqui?</string>
    <string name="exLocation">Erro com a localização!</string>

    <string name="sQDeleteUser">Você deseja deletar este usuário?</string>
    <string name="sQDeleteEvent">Você deseja deletar este evento?</string>

    <string name="sBtnParticipants">Participantes</string>
    <string name="sBtnParticipate">Participar</string>
    <string name="sBtnNotParticipate">Sair</string>


    <string name="exIncorrectlyTypedField">Algum campo foi digitado incorretamente!</string>
    <string name="exUniqueLogin">Este login já existe!</string>
    <string name="exLogin">Não foi possível Logar!</string>
    <string name="exBD">Erro com o BD!</string>
    <string name="exGetUserById">Erro ao recuperar Usuario por Id!</string>
    <string name="exDelete">Erro ao deletar!</string>
    <string name="exList">Erro ao carregar lista!</string>
    <string name="exParticipate">Erro ao tentar participar do Evento!</string>

    <string name="title_act_new_register">Cadastro</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Minha Home</string>
    <string name="title_my_events">Meus Eventos</string>
    <string name="title_all_events">Todos os Eventos</string>
    <string name="title_activity_event">Evento</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_maps">Map</string>
</resources>
