<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andri.eventsapp.EventActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">




        <!--  Name Label -->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText android:id="@+id/edtNewNameEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/sNameEvent"/>

        </android.support.design.widget.TextInputLayout>

        <!--  Description Label -->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText android:id="@+id/edtNewDescriptionEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/sDescriptionEvent"/>

        </android.support.design.widget.TextInputLayout>

        <!--  Date Label -->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText android:id="@+id/edtNewDateEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="@string/sDateEvent"/>

        </android.support.design.widget.TextInputLayout>

        <!--  Time Label -->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText android:id="@+id/edtNewTimeEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/sTimeEvent"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLocation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/sBtnLocation"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnNewEvent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/sBtnNewEvent"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnUpdateEvent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/sBtnUpdateEvent"
            android:visibility="gone"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnDeleteEvent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/sBtnDeleteEvent"
            android:visibility="gone"/>


    </LinearLayout>



</android.support.constraint.ConstraintLayout>
